# bulwark-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.ru.md  SECURITY.md  config.example.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_rule_proposal.md
.github/workflows/: auto-label.yml  ci.yml  publish.yml  release.yml  stale.yml  sync-labels.yml  test-publish.yml  welcome.yml
config/: policies.yaml
docs/: AUDIT-REPORT-week2.md  AUDIT-REPORT-week3.md  AUDIT-REPORT-week4.md  AUDIT-REPORT.md  FAQ.md  INTEGRATIONS.md  OBSERVABILITY.md  PERFORMANCE.md  RELEASE-v0.2.0.md  RELEASE-v0.3.0.md  RELEASING.md  RUNBOOK.md
docs/adr/: 0001-stdio-proxy-via-asyncio-subprocess.md  0002-sqlite-with-async-queue-writer.md  0003-event-log-schema.md  0005-observability-and-telemetry.md
red_team/: corpus.yaml
src/bulwark_mcp/: benchmark.py  capability.py  cli.py  config.py  doctor.py  proxy.py
src/bulwark_mcp/detectors/: rules.py
src/mcp_firewall/: cli.py  config.py  doctor.py  health.py  inspector.py  lint.py  models.py  policy.py  proxy.py  stats.py  storage.py  telemetry.py
src/mcp_firewall/detectors/: __init__.py  base.py  llm.py  rules.py
src/mcp_firewall/rules/builtin/: exfiltration.yaml  html_injection.yaml  role_hijack.yaml  shell_injection.yaml  unicode_tricks.yaml
tests/: test_capability.py  test_cli.py  test_detectors_llm.py  test_detectors_rules.py  test_doctor.py  test_inspector.py  test_lint.py  test_policy.py  test_proxy.py  test_proxy_block.py  test_recent_pocs.py  test_red_team_corpus.py  test_storage.py  test_telemetry.py
tools/: red_team.py
