[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "mcp-firewall"
version = "0.1.0"
description = "Prompt-injection firewall and audit log for Model Context Protocol (MCP) servers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Aleksandr Churilov" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "prompt-injection",
    "security",
    "llm",
    "ai-safety",
    "claude",
    "anthropic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "pydantic>=2.6,<3",
    "click>=8.1,<9",
    "rich>=13.7,<14",
    "aiosqlite>=0.19,<1",
    "pyyaml>=6.0,<7",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.scripts]
mcp-firewall = "mcp_firewall.cli:main"

[project.urls]
Homepage = "https://github.com/churik/mcp-firewall"
Repository = "https://github.com/churik/mcp-firewall"
Issues = "https://github.com/churik/mcp-firewall/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_firewall"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF", "S", "ASYNC"]
ignore = [
    "S101",
    "S603",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S603", "S607", "ASYNC230"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
filterwarnings = ["error"]
